# ml3

./: .gitignore  explore.ipynb  hello.py  image_scaling.ipynb  pyproject.toml
SRCNN/: test.py  train.py
SRCNN-reference/: train.py
TUW-ML_UE3-master/: requirements.txt
TUW-ML_UE3-master/eval_score/: console_out.txt  evaluation_scores.csv
TUW-ML_UE3-master/eval_scores/: evaluation_scores.csv
TUW-ML_UE3-master/model/: losses.csv  model.pt  model_10_1.pt  model_10_best.pt  model_10_final.pt  model_11_2.pt  model_11_best.pt  model_11_final.pt  model_12_2.pt  model_12_final.pt  model_13_2.pt  model_13_final.pt  model_14_final.pt  model_15_final.pt  model_16_final.pt  model_17_final.pt  model_18_2.pt  model_18_final.pt  model_19_final.pt  model_1_0.pt  model_1_1.pt  model_1_2.pt  model_1_best.pt  model_1_final.pt  model_20_2.pt  model_20_best.pt  model_20_final.pt  model_21_final.pt  model_22_best.pt  model_22_final.pt  model_23_best.pt  model_23_final.pt  model_24_2.pt  model_24_best.pt  model_24_final.pt  model_25_final.pt  model_26_final.pt  model_27_final.pt  model_28_final.pt  model_29_final.pt  (+65 more)
TUW-ML_UE3-master/src/: config.yaml  data_loader.py  data_loading.py  test.py  train.py
TUW-ML_UE3-master/src_copy/: config.json  config.yaml  data_loader.py  test.py  train.py  utils.py  visualize.py
implementation/: .gitignore  README.md  requirements.txt
implementation/eval_score/: evaluation_scores.csv
implementation/eval_scores/: evaluation_scores.csv
tg2/: config.py  data_loader.py  model.py  train.py
tinygrad_impl/: data.py  model.py  train.py
(+362 files in other folders)
